--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  shared_preferences: ^2.2.2
   url_launcher: ^6.2.2
+  animated_splash_screen:
+  page_transition: ^2.0.9
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
